--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Navbar start -->
   <nav class="navbar">
     <img src="./img/logontb.png" class="biotiskita">
-    <a href="#" class="navbar-logo">www.biotis<span>NTB</span>.</a>
+    <a href="#" class="navbar-logo">biotis<span>kita</span>.</a>
 
     <div class="navbar-nav">
       <a href="#home">Home</a>
