--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>biotiskita</title>
+  <title>Kopi KITA</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
   <!-- Navbar start -->
   <nav class="navbar">
     <img src="./img/logontb.png" class="biotiskita">
-    <a href="#" class="navbar-logo">biotis<span>kita</span>.</a>
+    <a href="#" class="navbar-logo">biotis<span>NTB</span>.</a>
 
     <div class="navbar-nav">
       <a href="#home">Home</a>
@@ -108,7 +108,7 @@
           </div>
         </li>
         <li>
-          <img src="./img/home/8.jpg" class="slide-image">
+          <img src="./img/home/8.jpg" class="slide-image1">
           <div class="caption left-align">
             <!-- Caption for slide 3 -->
           </div>
@@ -126,7 +126,7 @@
           </div>
         </li>
         <li>
-          <img src="./img/home/expolotim.jpg" class="slide-image">
+          <img src="./img/home/expolotim.jpg" class="slide-image1">
           <div class="caption left-align">
             <!-- Caption for slide 6 -->
           </div>
