--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <!-- Hero Section start -->
   
   
-  <section id="home" class="about">
+  <section id="home" class="home">
       <br>
       <br>
       <br>
