--- a/index.html
+++ b/index.html
@@ -96,8 +96,14 @@
       <br>
       <br>
       <br>
-      <h2><span>kami</span> yang terbaik</h2>
-      
+      <h2><span>Kami berikan</span> yang terbaik</h2>
+        <p style="text-align: center;">selamat datang di Biotis kita</p>
+        <p style="text-align: center;">wilayah Nusa Tenggara Barat</p>
+        <p >""</p>
+        <p style="text-align: center;">kami siap membantu Anda</p>
+        <img src="./img/zulmei.jpg" class="petugas"> 
+        <img src="./img/hamzan.jpg" class="petugas">
+        <img src="./img/tri.jpeg" class="petugas">
        <div class="slider">
         <ul class="slides">
           <li>
@@ -110,6 +116,12 @@
             <img src="./img/home/7.png" class="slide-image1">
             <div class="caption left-align">
             <!-- Caption for slide 2 -->
+            </div>
+          </li>
+          <li>
+            <img src="./img/home/8.jpg" class="slide-image1">
+            <div class="caption left-align">
+            <!-- Caption for slide 3 -->
             </div>
           </li>
           <li>
@@ -165,8 +177,6 @@
 
   <!-- Menu Section start -->
   <section id="menu" class="menu">
-      <br>
-      <br>
       <br>
       <br>
       <br>
@@ -288,40 +298,44 @@
       <br>
       <br>
       <br>
+      <h2><span>Merawat tanaman</span> lebih baik</h2>
+      <p style="text-align: center;">pilih foto tanaman usaha Anda</p>
+      <p style="text-align: center;">akan muncul jadwal Aplikasi produk kami</p>
       <br>
       <br>
-      <br>
-      <br>
-      <h2><span>pilih</span>tanaman</h2>
-      
-      <div class="slider">
+       <div class="slider">
         <ul class="slides">
             <li>
                 <a href="./img/jadwal/jadwalpadi.jpg" target="_blank">
+                  <h2 style="text-align: center;">PADI</h2>
                   <img src="./img/jadwal/hampadi.jpg" class="slide-images2"></a>
                   <div class="caption left-align">
                   </div>
             </li>
             <li>
                 <a href="./img/jadwal/jadwaljagung.png" target="_blank">
+                  <h2 style="text-align: center;">JAGUNG</h2>
                   <img src="./img/jadwal/jagung.jpg" class="slide-images2"></a>
                   <div class="caption left-align">
                   </div>
             </li>
             <li>
               <a href="./img/jadwal/jadwalkacang.png" target="_blank">
+                <h2 style="text-align: center;">KACANG TANAH</h2>
                 <img src="./img/jadwal/kacang.jpg" class="slide-images2"></a>
                 <div class="caption left-align">
                 </div>
             </li>
             <li>
               <a href="./img/jadwal/jadwalcabe.png" target="_blank">
+                <h2 style="text-align: center;">CABE</h2>
                 <img src="./img/jadwal/cabe.png" class="slide-images2"></a>
                 <div class="caption left-align">
                 </div>
             </li>
             <li>
               <a href="./img/jadwal/jadwaltomat.png" target="_blank">
+                <h2 style="text-align: center;">TOMAT</h2>
                 <img src="./img/jadwal/tomat.png" class="slide-images2"></a>
                 <div class="caption left-align">
                 </div>
